<resources>
    <string name="app_name">Leonard Maltin Game</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_game">The\nLeonard Maltin\nGame</string>
    <string-array name="num_players">
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>
    <string-array name="num_points">
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>
	    <string name="goal"><u>Your Goal:</u></string>
		<string name="goal_text"><p>Try to guess the movie based on the given clues.  Guess the right movie, you get a point.  If you guess wrong, the player that forced you to make a guess gets the point.</p></string>
		<string name="setup"><u>Setup:</u></string>
		<string name="setup_text">I recommend that one player be the designated reader and reads everything displayed on the screen similar to how Doug Benson does it on his podcast.  The only difference here is that everyone can play, including the reader.  If you want to pass the phone around to each person on their turn, that can work too.</string>
	    <string name="how_to_play">How-To-Play</string>
		<string name="getting_started"><u>Getting Started:</u></string>
		<string name="getting_started_text">"The game begins and moves counter-clockwise from Player 1.\n\nAt the start of each round a player will choose a category and a year that the mystery movie is in.\n\nThe players will receive clues about the movie based on what Leonard Maltin wrote in his review to help with guessing the movie title.\n\nNow a round of bidding begins where the players bid on how many names they think they need to hear, starting from the bottom of the casting list, to name the movie.\n\nFor example, if the movie is Star Wars and you say you can name it in 2 names you're not going to get Mark Hamill and Harrison Ford, you're going to get the bottom 2 actors on the casting list.\n\nYou want to use all the clues and names given to you to guess the movie's title.\n\nIf you dont think you can name it in less names than the player before you, you can force them to try to guess the movie.  If the person you challenged guesses wrong, you get the point.  If they guess right, they get the point.\n\nA new round begins after the movie is revealed.\n\nThe first player to reach the chosen points to win, wins the game!"</string>
	    <string name="game_setup_title">Game Setup</string>
		<string name="guess_names_screen_title">In How Many Names</string>
		<string name="names_screen_title">Your Names Are...</string>
		<string name="option1_str">Force the player before you to name the movie</string>
		<string name="option2_str">Can you name it with less names?</string>
		<string name="player_instructions1">Say aloud the names listed above and the title of the movie that you think it is.</string>
		<string name="player_instructions2">"Once you've announced your guess, reveal the title of the movie."</string>
		<string name="winner_screen_title">Someone won!</string>
		<string name="doug_thanks_header">All credit goes to Doug Benson for the game idea</string>
		<string name="doug_thanks_paragraph">This app was entirely fan made.  Doug Benson plays the Leonard Maltin Game on his podcast Doug Loves Movies.</string>
		<string name="maltin_thanks_header">A lot of credit also goes to the Leonard Maltin 2015 Movie Guide</string>
		<string name="maltin_thanks_paragraph">The Leonard Maltin 2015 Movie Guide was used for movie ratings and review snippets. The app, along with IMDB, helped shape each movies casting list</string>
		<string name="category_thanks_header">Category Credits</string>
		<string name="category_thanks_paragraph">Most categories were pulled from the Reddit subreddit r/lmgcategories.  Other categories were taken from the podcast submitted by twitter users who I tried to thank below.  </string>
		<string name="category_thanks_paragraph2">"If I failed to give you credit for a category you created or I spelled your twitter handle wrong please email me and I'll make the changes.  I couldn\'t give credit to many of the categories found on reddit because the users deleted their accounts."</string>
		<string name="user_list">"Million Dollar Baby Arm - @Topiaryskeleton\nSausagefest - @clayHansen1\nWhose Line is it Anyway - @Nateheadhadley\nWe Are Farmers - @Mantitebow\nArch Enemies - @Cuntatron\nSmaug Life - @Errantparadigm\nRow vs Wade - JeffTcaro"\nPerfect Dorm - @kojiwerner</string>
		<string name="image_header">Image Credits</string>
		<string name="image_paragraph">All movie images were taken from themoviedb.org</string>
		<string name="help_header">Want to help?</string>
		<string name="help_paragraph">Email categories and their movies to adelprete87@gmail.com.  Each category must have atleast 3 movies.  You may also send over movies that fit existing categories that are not in the game.</string>
				<string name="GreatestMovieEverTold_hint">Movies featuring a narrator.</string>
				<string-array name="GreatestMovieEverTold_array">
		       		<item>AChristmasStory</item>
		       		<item>Goodfellas</item>
		        	<item>TheShawshankRedemption</item>
		        	<item>TheSandlot</item>
		        	<item>AmericanPsycho</item>
			       	<item>ForrestGump</item>
					<item>SinCity</item>
					<item>TheUsualSuspects</item>
					<item>FightClub</item>
				</string-array>
				<string name="OrlandoMagic_hint">Films featuring Orlando Bloom or Orlando Jones</string>
				<string-array name="OrlandoMagic_array">
				    <item>BlackHawkDown</item>
		       		<item>Drumline</item>
		        	<item>Elizabethtown</item>
			       	<item>Evolution</item>
					<item>PiratesoftheCarribean</item>
				</string-array>
				<string name="NuthinButaGThang_hint">"Films that are rated G"</string>
				<string-array name="NuthinButaGThang_array">
				    <item>TheLionKing</item>
				    <item>ToyStory</item>
		       		<item>Ratatouille</item>
				</string-array>
				<string name="MoviesWhereBradPittEats_hint">"Movies where Brad Pitt eats something"</string>
				<string-array name="MoviesWhereBradPittEats_array">
				    <item>Se7en</item>
				    <item>OceansEleven</item>
		       		<item>TheCuriousCaseofBenjaminButton</item>
			   		<item>FightClub</item>
					<item>Moneyball</item>
					<item>MrandMrsSmith</item>
				</string-array>
				<string name="GoldenShowersPlaybook_hint">"Movies that start with the letter 'P'"</string>
				<string-array name="GoldenShowersPlaybook_array">
				    <item>PanicRoom</item>
				    <item>PansLabyrinth</item>
		       		<item>Psycho</item>
		       		<item>Poltergeist</item>
		       		<item>PhoneBooth</item>
			    	<item>Primer</item>
					<item>PiratesoftheCarribean</item>
					<item>PointBreak</item>
				</string-array>
				<string name="MeLoveYouWrongTime_hint">"Time Travel Romance Movies"</string>
				<string-array name="MeLoveYouWrongTime_array">
				    <item>TheTimeTravelersWife</item>
				    <item>TheLakeHouse</item>
		       		<item>KateandLeopold</item>
				</string-array>
				<string name="QuaidsAwarenessMonth_hint">"Movies that Dennis or Randy Quaid act in"</string>
				<string-array name="QuaidsAwarenessMonth_array">
				    <item>TheDayAfterTomorrow</item>
				    <item>TheParentTrap</item>
		       		<item>NationalLampoonsChristmasVacation</item>
		       		<item>IndependenceDay</item>
		       		<item>Dragonheart</item>
			   		<item>TheRookie</item>
		       		<item>Kingpin</item>
				</string-array>
				<string name="BasedOnATwoStory_hint">"Movies that have the word 'house' in the title"</string>
				<string-array name="BasedOnATwoStory_array">
				    <item>BigMommasHouse</item>
				    <item>AnimalHouse</item>
		       		<item>RoadHouse</item>
		       		<item>TheHouseBunny</item>
		       		<item>Houseof1000Corpses</item>
		       		<item>TheLakeHouse</item>
				</string-array>
				<string name="TheFutureThatWas_hint">"Films, that when filmed, took place in the future but no longer do"</string>
				<string-array name="TheFutureThatWas_array">
				    <item>ASpaceOdyssey</item>
				    <item>TwoThousandTwelve</item>
		       		<item>EscapeFromNewYork</item>
		       		<item>AClockworkOrange</item>
		       		<item>IAmLegend</item>
				</string-array>
				<string name="HairyMaguire_hint">"Movies where Tom Cruise has long hair"</string>
				<string-array name="HairyMaguire_array">
				    <item>RockofAges</item>
				    <item>TheLastSamurai</item>
		       		<item>Magnolia</item>
			   		<item>InterviewwiththeVampire</item>
				</string-array>
				<string name="WayansWorld_hint">"Films featuring atleast one of the members of the Wayans family"</string>
				<string-array name="WayansWorld_array">
				    <item>ScaryMovie</item>
				    <item>ImGonnaGitYouSucka</item>
		       		<item>AbovetheRim</item>
					<item>WhiteChicks</item>
					<item>DontBeaMenace</item>
				</string-array>
				<string name="TopBilled_hint">"The top billed actor is named Bill(or William, or any derivative thereof)"</string>
				<string-array name="TopBilled_array">
				    <item>GroundhogDay</item>
				    <item>WildWildWest</item>
		       		<item>StarTrekIITheWrathofKhan</item>
					<item>Ali</item>
				</string-array>
				<string name="SausageFest_hint">"Movies that have an all male cast"</string>
				<string-array name="SausageFest_array">
				    <item>TheThing</item>
		       		<item>SavingPrivateRyan</item>
		       		<item>GlengarryGlenRoss</item>
					<item>BlackHawkDown</item>
					<item>MasterandCommander</item>
					<item>LordoftheFlies</item>
					<item>ReservoirDogs</item>
					<item>LawrenceofArabia</item>
				</string-array>
				<string name="MannMadeMovies_hint">"Films directed by Michael Mann"</string>
				<string-array name="MannMadeMovies_array">
				    <item>Heat</item>
				    <item>Collateral</item>
		       		<item>PublicEnemies</item>
		       		<item>Ali</item>
			    	<item>TheLastoftheMohicans</item>
					<item>MiamiVice</item>
				</string-array>
				<string name="FemaleBits_hint">"Movies with a female robot"</string>
				<string-array name="FemaleBits_array">
				    <item>WALLE</item>
				    <item>RiseoftheMachines</item>
		       		<item>AustinPowersinGoldmember</item>
					<item>TheStepfordWives</item>
				</string-array>
				<string name="WaistDown_hint">"Films featuring Joe Pantliano(Joey Pants) or John Leguizamo(Johnny Legs)"</string>
				<string-array name="WaistDown_array">
				    <item>TheMatrix</item>
				    <item>SuperMarioBrothers</item>
		       		<item>Memento</item>
		       		<item>ThePest</item>
	  				<item>Spawn</item>
					<item>LandoftheDead</item>
				</string-array>
				<string name="InYourFace_hint">"Films where someone wears someone else's face"</string>
				<string-array name="InYourFace_array">
				    <item>FaceOff</item>
				    <item>TheSilenceoftheLambs</item>
		       		<item>Houseof1000Corpses</item>
				</string-array>
				<string name="IcyDeadPeople_hint">"Films where someone is frozen to death"</string>
				<string-array name="IcyDeadPeople_array">
				    <item>TheShining</item>
				    <item>Cliffhanger</item>
		       		<item>Titanic</item>
					<item>DemolitionMan</item>
				</string-array>
				<string name="PutMeInCoach_hint">"Films that have a focus on Air Travel or Airplanes"</string>
				<string-array name="PutMeInCoach_array">
				    <item>TheAviator</item>
				    <item>ConAir</item>
		       		<item>DieHard2</item>
					<item>SnakesonaPlane</item>
					<item>TheTerminal</item>
				</string-array>
				<string name="DogGoneIt_hint">"Films where a dog dies"</string>
</resources>