<?xml version="1.0" encoding="utf-8"?>
<ScrollView 
    android:background="#ffffffff" 
    android:layout_width="fill_parent" 
    android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout 
        android:background="#ffffffff" 
        android:layout_width="fill_parent" 
        android:layout_height="fill_parent">
        
        <TextView 
            android:id="@+id/category_heading" 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" 
            android:layout_marginTop="15.0dip" 
            android:layout_alignParentLeft="true" 
            android:layout_alignParentTop="true"            
            android:text="Category: " 
            android:textAppearance="?android:textAppearanceLarge" />
        
        <TextView  
            android:id="@+id/year_heading" 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" 
            android:layout_marginTop="18.0dip" 
            android:layout_below="@id/category_heading" 
            android:layout_alignParentLeft="true"            
            android:text="Year: " 
            android:textAppearance="?android:textAppearanceLarge" />
        
        <TextView 
            android:id="@+id/rating_heading" 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" 
            android:layout_marginTop="14.0dip" 
            android:layout_below="@id/year_heading" 
            android:layout_alignParentLeft="true"             
            android:text="Leonard gives it:" 
            android:textAppearance="?android:textAppearanceLarge" />
        
        <TextView 
            android:id="@+id/year_text" 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" 
            android:layout_marginLeft="23.0dip"
            android:layout_toRightOf="@id/rating_heading" 
            android:layout_alignTop="@id/year_heading"              
            android:text="Medium Text" 
            android:textAppearance="?android:textAppearanceMedium"             />
        
        <TextView 
            android:id="@+id/category_text" 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" 
            android:layout_alignLeft="@id/year_text" 
            android:layout_alignTop="@id/category_heading"             
            android:text="Cat descrip" 
            android:textAppearance="?android:textAppearanceMedium" />
        
        <TextView 
            android:id="@+id/rating_text" 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/year_text" 
            android:layout_alignBottom="@id/rating_heading"              
            android:text="Medium Text" 
            android:textAppearance="?android:textAppearanceMedium" />
        
        <TextView 
            android:id="@+id/description_heading" 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" 
            android:layout_marginTop="11.0dip" 
            android:layout_below="@id/rating_heading" 
            android:layout_alignParentLeft="true"            
            android:text="Leonard says..." 
            android:textAppearance="?android:textAppearanceLarge" />
        
        <TextView  
            android:id="@+id/description_text" 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/rating_text" 
            android:layout_alignTop="@id/description_heading"             
            android:text="blah blah blah"  
            android:textAppearance="?android:textAppearanceMedium" />
        
        <View 
            android:id="@+id/seperator" 
            android:background="#ffb00000" 
            android:layout_width="300.0dip" 
            android:layout_height="1.0dip" 
            android:layout_marginTop="14.0dip" 
            android:layout_below="@id/description_text" 
            android:layout_centerHorizontal="true" />
        
        <TextView 
            android:id="@+id/playerturn_heading" 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content"
            android:layout_marginTop="20.0dip" 
            android:layout_below="@id/seperator" 
            android:layout_centerHorizontal="true"  
            android:gravity="center"                       
            android:textSize="40.0sp" 
            android:textColor="#ff990000"  
            android:fontFamily="sans-serif-condensed" />
        
        <TextView 
            android:id="@+id/player_directions" 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" 
            android:layout_marginLeft="5.0dip" 
            android:layout_marginTop="15.0dip" 
            android:layout_marginRight="5.0dip" 
            android:layout_below="@id/playerturn_heading" 
            android:layout_centerHorizontal="true" 
            android:gravity="center"             
            android:textSize="20.0sp" />
        
        <RelativeLayout 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" 
            android:layout_below="@id/player_directions" 
            android:layout_centerHorizontal="true">
            
            <Spinner android:id="@+id/spinner1" 
                android:layout_width="80.0dip" 
                android:layout_height="wrap_content" 
                android:layout_marginTop="20.0dip" />
            
            <TextView 
                android:id="@+id/names_str" 
                android:layout_width="wrap_content" 
                android:layout_height="wrap_content" 
                android:layout_marginTop="22.0dip" 
                android:layout_toRightOf="@id/spinner1"                
                android:text="names" 
                android:textSize="26.0sp" />
            
            <Button 
                android:id="@+id/next_btn1" 
                android:layout_width="wrap_content" 
                android:layout_height="wrap_content" 
                android:layout_marginLeft="50.0dip" 
                android:layout_marginTop="20.0dip" 
                android:layout_toRightOf="@id/names_str"   
                android:background="@drawable/customcolor"                               
                android:text="Next" 
                android:textColor="#ffffffff"                 
                android:textSize="22.0sp"                 
                android:onClick="nextMove" />
        </RelativeLayout>
        
        <RelativeLayout 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" 
            android:layout_below="@id/player_directions" 
            android:layout_centerHorizontal="true">
            
            <TextView 
                android:id="@+id/option1_str" 
                android:layout_width="120.0dip" 
                android:layout_height="wrap_content" 
                android:layout_marginTop="22.0dip" 
                android:text="@string/option1_str"
                android:textSize="20.0sp" 
                android:visibility="invisible" />
            
            <Button  
                android:id="@+id/force_guess_btn" 
                android:layout_width="120.0dip" 
                android:layout_height="wrap_content" 
                android:layout_marginTop="15.0dip" 
                android:layout_below="@id/option1_str"  
                android:background="@drawable/customcolor"                               
                android:text="Name it!" 
                android:textSize="22.0sp" 
                android:textColor="#ffffffff"                 
                android:onClick="getNames"
                android:visibility="invisible" />
            
            <TextView 
                android:id="@+id/or_str" 
                android:layout_width="wrap_content" 
                android:layout_height="wrap_content" 
                android:layout_marginLeft="25.0dip" 
                android:layout_marginTop="25.0dip" 
                android:layout_toRightOf="@id/option1_str" 
                android:layout_centerVertical="true"                
                android:text="-OR-" 
                android:textSize="25.0sp" 
                android:visibility="invisible" />
            
            <TextView  
                android:id="@+id/option2_str"  
                android:layout_width="120.0dip" 
                android:layout_height="wrap_content" 
                android:layout_marginLeft="25.0dip" 
                android:layout_marginTop="22.0dip" 
                android:layout_toRightOf="@id/or_str"                
                android:text="@string/option2_str" 
                android:textSize="20.0sp"
                android:visibility="invisible"/>
            
            <Spinner 
                android:id="@+id/spinner2" 
                android:layout_width="80.0dip" 
                android:layout_height="wrap_content" 
                android:layout_marginLeft="25.0dip" 
                android:layout_marginTop="10.0dip" 
                android:layout_toRightOf="@id/or_str" 
                android:layout_below="@id/option2_str"
                android:visibility="invisible" />
            
            <Button  
                android:id="@+id/next_btn2"   
                android:layout_width="wrap_content" 
                android:layout_height="wrap_content" 
                android:layout_marginLeft="25.0dip" 
                android:layout_marginTop="10.0dip" 
                android:layout_marginBottom="15.0dip" 
                android:layout_toRightOf="@id/or_str" 
                android:layout_below="@id/spinner2"  
                android:background="@drawable/customcolor"                              
                android:text="Next" 
                android:textSize="20.0sp" 
                android:textColor="#ffffffff"                 
                android:onClick="nextMove" 
                android:visibility="invisible" />
            
        </RelativeLayout>
        <LinearLayout 
            android:orientation="vertical" 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" 
            android:layout_below="@id/player_directions" 
            android:layout_centerHorizontal="true">
            
            <TextView  
                android:id="@+id/name_list" 
                android:layout_width="wrap_content" 
                android:layout_height="wrap_content" 
                android:layout_marginTop="15.0dip" 
                android:layout_gravity="center"     
                android:gravity="center"                             
                android:text="@string/game_setup_title" 
                android:textSize="25.0sp"                
                android:fontFamily="sans-serif-condensed"
                android:visibility="gone" />
            
            <TextView 
                android:id="@+id/player_instructions" 
                android:layout_width="wrap_content" 
                android:layout_height="wrap_content" 
                android:layout_marginTop="15.0dip" 
                android:layout_gravity="center"       
                android:gravity="center"                           
                android:text="@string/player_instructions1"
				android:textSize="20.0sp"                
                android:visibility="gone" />
            
            <TextView 
                android:id="@+id/player_instructions2"  
                android:layout_width="wrap_content" 
                android:layout_height="wrap_content" 
                android:layout_gravity="center" 
                android:gravity="center"                                 
                android:text="@string/player_instructions2"
                android:textSize="20.0sp"
                android:visibility="invisible"/>
            
            <Button 
                android:id="@+id/next_btn3"   
                android:layout_width="275.0dip" 
                android:layout_height="wrap_content" 
                android:layout_marginTop="10.0dip" 
                android:layout_marginBottom="20.0dip" 
                android:layout_centerHorizontal="true" 
                android:layout_centerVertical="true" 
                android:layout_gravity="center"                 
                android:background="@drawable/redbutton"                               
                android:text="Reveal Movie!" 
                android:textSize="22.0sp" 
                android:textColor="#ffffffff"                  
                android:onClick="runResults"
                android:visibility="invisible"/>
            
        </LinearLayout>
    </RelativeLayout>
</ScrollView>
